--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # dependencies
 node_modules/
+.claude/
+.yarn/
+.yarnrc.yml
 
 # Expo
 .expo/
@@ -32,6 +35,7 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
